@@ -1,4 +1,4 @@
-/* $Id: libport.h,v 1.4 2015-07-04 22:09:27 bfriesen Exp $ */
+/* $Id: libport.h,v 1.5 2015-08-19 02:31:04 bfriesen Exp $ */
 
 /*
  * Copyright (c) 2009 Frank Warmerdam
@@ -49,6 +49,11 @@ lfind(const void *key, const void *base, size_t *nmemb, size_t size,
 #endif
 
 #if !defined(HAVE_SNPRINTF)
+#undef vsnprintf
+#define vsnprintf _TIFF_vsnprintf_f
+
+#undef snprintf
+#define snprintf _TIFF_snprintf_f
 int snprintf(char* str, size_t size, const char* format, ...);
 #endif
 
